# scon_build

./: .gitignore  README.md  flake.nix  setup.cfg
gup/: Gupfile  all.gup
gup/_build/: all.gup
gup/_build/Calibration/: all.gup
gup/_build/Planer/: all.gup
gup/builders/: __init__.py  arduino_bin.py
python/: noxfile.py  pyproject.toml
python/planer_build/: configure.py  message.py  planer_cli.py  util.py
python/planer_build/gup/_build/: Gupfile  all.gup
python/planer_build/gup/_build/test/: all.gup
python/planer_build/gup/builders/: __init__.py  arduino_bin.py
python/planer_build/tools/: arduino_cli.py  planer_set_env
python/test/: __init__.py  test_config.py
python/test/data/: config.toml
sh/: nix_install  nix_install_2.18.2  planer  planer_set_env
