[project]
name = "planer_build"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "argcomplete",
    "mk_build"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[tool.setuptools.package-data]
planer_build = ["gup/**/*.gup", "gup/**/*.py", "gup/**/Gupfile",
    "tools/planer_set_env"]

[project.scripts]
scon = "planer_build.planer_cli:main"

[tool.coverage.run]
source = [ "planer_build" ]

[tool.mypy]
packages = [ "planer_build", "test" ]

[tool.pytest.ini_options]
testpaths = [ "test" ]
