[project]
name = "planer_build"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "argcomplete",
    "mk_build"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[tool.setuptools.package-data]
planer_build = ["gup/**/*.gup", "gup/**/*.py", "gup/**/Gupfile",
    "tools/planer_set_env"]

[project.scripts]
scon = "planer_build.planer_cli:main"

[tool.coverage.run]
source = [ "planer_build" ]

[tool.mypy]
packages = [ "planer_build", "test" ]
strict = true

[[tool.mypy.overrides]]
module = [
    "planer_build.configure",
    "planer_build.gup.builders.arduino_bin",
    "planer_build.planer_cli",
    "planer_build.tools.arduino_cli",
    "planer_build.util",
    "test.test_config"
]
disable_error_code = [
    "attr-defined",
    "comparison-overlap",
    "list-item",
    "no-any-return",
    "type-arg"
]
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = [ "test" ]
